--- a/apps/host-ui/src/app/app.component.html
+++ b/apps/host-ui/src/app/app.component.html
@@ -1,17 +1,7 @@
-<h1>Dating app</h1>
-<div > 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th> 
-                <th>Username</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of users">
-                <td>{{item.id}}</td>
-                <td>{{item.username}}</td>
-            </tr>
-        </tbody>
-    </table>
+
+<app-nav></app-nav>
+<div class="container" style="margin-top: 100px;">
+    <app-home></app-home>
 </div>
+
+
