adding update method and spinned option loading indicator

--- a/apps/host-ui/src/styles.css
+++ b/apps/host-ui/src/styles.css
@@ -4,6 +4,7 @@
 @import "~bootswatch/dist/Cosmo/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
 @import "~ngx-toastr/toastr.css";
+@import "~ngx-spinner/animations/ball-scale-multiple.css";
 
 .tab-panel {
     border: 1px solid rgb(23, 16, 111);
