--- a/apps/host-ui/src/app/nav/nav.component.html
+++ b/apps/host-ui/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
       <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
         <div class="dropdown-toggle text-light" dropdownToggle >Welcome {{user.username | titlecase}}</div>
         <div class="dropdown-menu mt-3" *dropdownMenu>
-          <a  class="dropdown-item">Edit Profile</a>
+          <a  class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
           <div class="dropdown-divider"></div>
           <a  class="dropdown-item" (click)="logout()">Logout</a>
         </div>
