--- a/apps/host-ui/src/app/members/member-edit/member-edit.component.html
+++ b/apps/host-ui/src/app/members/member-edit/member-edit.component.html
@@ -54,7 +54,7 @@
       </tab>
 
       <tab heading="Edit Photots">        
-        <p>Will be included later</p>
+        <app-photo-editor [member]="member"></app-photo-editor>
       </tab>  
 
     </tabset>
