--- a/apps/host-ui/src/app/nav/nav.component.html
+++ b/apps/host-ui/src/app/nav/nav.component.html
@@ -17,7 +17,8 @@
  
       </ul>
       <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-        <div class="dropdown-toggle text-light" dropdownToggle >Welcome {{user.username | titlecase}}</div>
+        <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
+        <a class="dropdown-toggle text-light" dropdownToggle >Welcome {{user.username | titlecase}}</a>
         <div class="dropdown-menu mt-3" *dropdownMenu>
           <a  class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
           <div class="dropdown-divider"></div>
