--- a/apps/host-ui/src/app/messages/messages.component.html
+++ b/apps/host-ui/src/app/messages/messages.component.html
@@ -1,1 +1,70 @@
-<p>messages works!</p>
+<div class="row mb-4">
+	<div class="btn-group" name="container">        
+		<button class="btn btn-primary" btnRadio="Unread" [(ngModel)]="container" (click)="loadMessages()"><i class=" fa fa-envelope"></i>Unread</button>
+
+		<button class="btn btn-primary ml-2" btnRadio="Inbox" [(ngModel)]="container" (click)="loadMessages()"><i class=" fa fa-envelope-open"></i>Inbox</button>
+		
+		<button class="btn btn-primary ml-2" btnRadio="Outbox" [(ngModel)]="container" (click)="loadMessages()"><i class=" fa fa-paper-plane"></i>Outbox</button>
+	</div>
+</div>
+
+<div class="row" *ngIf="messages?.length === 0">
+	<h3>No messages</h3>
+</div>
+
+<div class="row" *ngIf="messages?.length && messages.length > 0">
+	<table class="table table-hover" style="cursor: pointer">
+		<tr>
+			<th style="width: 40%">Message</th>
+			<th style="width: 20%">From / To</th>
+			<th style="width: 20%">Sent / Received</th>
+			<th style="width: 20%"></th>
+		</tr>
+		<!-- <tr *ngFor="let message of messages" [routerLink]="{{container === "Outbox" ?? "/members/"  + message.recipientUsername : "/members/"  + message.senderUsername}}"  >
+
+		</tr> -->
+		<tr
+		[hidden] ="loading"
+		*ngFor="let message of messages"
+		routerLink='{{container === "Outbox" ? "/members/"  + message.recipientUserName : "/members/"  + message.senderUserName}}' 
+		[queryParams]="{tab: 3}">
+			<td>{{message.content}}</td>
+			<td>
+				<div *ngIf="container !== 'Outbox'">
+					<img 
+					  src="{{message.senderPhototUrl || './assets/user.png'}}"
+					  alt="{{message.senderUserName}}"
+					  class=" img-circle rounded-circle mr-2">
+					  <strong>{{message.senderUserName | titlecase}}</strong>
+				</div>
+
+				<div *ngIf="container === 'Outbox'">
+					<img 
+					  src="{{message.recipientPhototUrl || './assets/user.png'}}"
+					  alt="{{message.recipientUserName}}"
+					  class="img-circle rounded-circle mr-2">
+					  <strong>{{message.recipientUserName | titlecase}}</strong>
+				</div>
+				
+			</td>
+			<td>{{message.messageSent | timeago}}</td>
+			<td>
+				<button class="btn btn-danger" (click)="deleteMessage(message.id)" (click)="$event.stopPropagation()">Delete</button>
+			</td>
+		</tr>
+	</table>
+</div>
+
+<div class='d-flex justify-content-center' *ngIf='pagination !== null && pagination?.totalItems !==null && !loading && messages.length > 0'>
+    <pagination 
+        [boundaryLinks]='true' 
+        [totalItems]='pagination.totalItems' 
+        [itemsPerPage]='pagination.itemsPerPage'
+        [(ngModel)]='pagination.currentPage'
+        (pageChanged)='pageChanged($event)'
+        previousText='&lsaquo;' 
+        nextText='&rsaquo;' 
+        firstText='&laquo;'
+        lastText='&raquo;'>
+    </pagination>
+</div>
